fix no corporate pacs pledge on mobile

--- a/src/style/home-block.scss
+++ b/src/style/home-block.scss
@@ -258,6 +258,12 @@
     .highlight-contents {
       width: 100%;
       max-width: none;
+
+      .highlight-header {
+        font-size: 28px;
+        line-height: 25px;
+        margin-bottom: 15px;
+      }
     }
   }
 }
