--- a/src/style/join-page.scss
+++ b/src/style/join-page.scss
@@ -14,7 +14,7 @@ div.container {
 }
 
 .full-height {
-  height: calc(100vh - 50px);
+  min-height: calc(100vh - 50px);
 }
 
 div.splash {
